--- a/aboutus.css
+++ b/aboutus.css
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Ubuntu:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap');
 * {
     margin: 0%;
     padding: 0%;
+    font-family: Nunito, sans-serif;
 }
 
 body {
